--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ timezone: Europe/Oslo
 title: LunarWatcher
 
 remote-theme: lunarwatcher/jekyll-theme-githubpages
+github: LunarWatcher
+twitter: OliviaZoe0
