--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,22 @@ email: zoe.i2k1@gmail.com
 github: LunarWatcher
 twitter: OliviaZoe0
 
+name: LunarWatcher
+
 markdown: kramdown
+highlighter: rouge
+
+kramdown: 
+    input: GFM
+    hard_wrap: false
+    highlight: true
+    auto_ids: true
+
 theme: minima
+
+gems: [jekyll-paginate, jekyll-last-modified-at, jemoji]
 
 baseurl: ""
 sass:
     sass_dir: assets/css
+    style: compressed
