--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,11 @@ twitter: OliviaZoe0
 rss: /feed.xml
 stackoverflow: "6296561"
 deviantart: oliviazoe0
-discord-server: https://discordapp.com/invite/WTJ8g3v
+discord-server: "WTJ8g3v"
 discord-username: Olivia#0740
+keybase: oliviazoe0
+
+footer-description: "Hi! I'm Olivia, though I often go by Zoe. This is my website, and it contains different things I either feel like putting here, or stuff with an actual purpose (like repositories). There's also a knowledge base with random bits of information in different topics."
 
 name: LunarWatcher
 
@@ -22,8 +25,6 @@ kramdown:
 
 theme: minima
 
-gems: [jekyll-paginate, jekyll-last-modified-at, jemoji]
-
 baseurl: ""
 sass:
     sass_dir: assets/css
@@ -31,3 +32,5 @@ sass:
 
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+
