Refresh Discord invite to (try to) reduce spammers

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ twitter: OliviaZoe0
 rss: /feed.xml
 stackoverflow: "6296561"
 deviantart: oliviazoe0
-discord-server: "WTJ8g3v"
+discord-server: "bjZD42j"
 discord-username: Olivia#0740
 keybase: oliviazoe0
 
