Pagination pre-merge. Should be a separate branch, but I need to merge now

--- a/_config.yml
+++ b/_config.yml
@@ -34,3 +34,10 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
+gems: 
+  - "jekyll-paginate"
+
+
+paginate_path: "/posts/page/:num/"
+paginate: 15
+
