--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ deviantart: oliviazoe0
 discord-server: "bjZD42j"
 discord-username: Olivia#0740
 keybase: oliviazoe0
+picarto: OliviaZoe0
 
 name: LunarWatcher
 
