--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,6 @@ email: zoe.i2k1@gmail.com
 github: LunarWatcher
 twitter: OliviaZoe0
 rss: /feed.xml
-stackoverflow: "6296561"
 deviantart: oliviazoe0
 discord-server: "bjZD42j"
 discord-username: Olivia#0740
@@ -21,6 +20,7 @@ kramdown:
     hard_wrap: false
     highlight: true
     auto_ids: true
+    parse_block_html: true
 
 theme: minima
 
