Update deployment system to use branching

--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseURL: https://lunarwatcher.github.io
 disablePathToLower: true
 languageCode: en-us
 title: LunarWatcher
-publishDir: site
+publishDir: public
 permalinks:
   posts: /posts/:year/:month/:day/:slug
 
