--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,7 @@ permalinks:
 
 uglyurls: true
 pygmentsUseClasses: true
+disablePathToLower: false
 
 markup:
   goldmark:
@@ -24,6 +25,9 @@ outputFormats:
     mediatype: application/rss
     baseName: feed
 
+taxonomies:
+  tag: tags
+
 menu:
   main:
   - identifier: Home 
@@ -37,4 +41,8 @@ menu:
   - identifier: Emoji reference 
     name: Emoji reference
     url: "/emojis.html"
+    weight: -80
+  - identifier: Tags
+    name: Tags
+    url: "/tags.html"
     weight: -90
