--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        submodules: true
+        with:
+          submodules: true
       - uses: actions/setup-python@v2
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
