--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -24,6 +24,7 @@ jobs:
           extended: true
       - name: Run hugo and commit
         run: |
+          pwd
           cd $GITHUB_WORKSPACE/LunarWatcher.github.io
           git config --global user.name github-actions[bot]
           git config --global user.email 41898282+github-actions[bot]@users.noreply.github.com
