--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Run hugo and commit
         run: |
           pwd
+          rm -rf !(.git)
           git config --global user.name github-actions[bot]
           git config --global user.email 41898282+github-actions[bot]@users.noreply.github.com
           hugo --minify
