How about this?

--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         shell: bash
         run: |
           pwd
-          cd public && rm -rf !(".git") && cd ..
+          cd public && git rm -rf . && cd ..
           git config --global user.name github-actions[bot]
           git config --global user.email 41898282+github-actions[bot]@users.noreply.github.com
           hugo --minify
