--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -1,7 +1,7 @@
 name: Deploy pages
 on:
   push:
-    branches: [ source ]
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.85.0'
+          hugo-version: 'latest'
           extended: true
       - name: Run hugo and commit
         shell: bash
