--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: LunarWatcher/LunarWatcher.github.io
-          ref: master
+          ref: deployment
           path: public
       - uses: actions/setup-python@v2
       - name: Setup Hugo
