I think this should disable taxonomy RSS

--- a/config.yaml
+++ b/config.yaml
@@ -22,6 +22,12 @@ markup:
     endLevel: 6
     startLevel: 2
 
+outputs:
+  taxonomy: ["HTML"]
+  taxonomyTerm: ["HTML"]
+  page: ["HTML"]
+  home: ["HTML"]
+
 outputFormats:
   RSS:
     mediatype: application/rss
