--- a/config.yaml
+++ b/config.yaml
@@ -60,7 +60,7 @@ menu:
     weight: 5
 
 params:
-  discord: bJgdwZJYXY
+  discord: tDwFdaTVkJ
   discord_user: Olivia#0740
   twitter: OliviaZoe0
   github: LunarWatcher
