--- a/config.yaml
+++ b/config.yaml
@@ -61,7 +61,7 @@ menu:
     weight: 5
 
 params:
-  discord: tDwFdaTVkJ
+  discord: y3vd2vAYru
   discord_user: Olivia#0740
   twitter: OliviaZoe0
   github: LunarWatcher
