Disable shit quotes

--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,7 @@ markup:
   goldmark:
     extensions:
       linkify: true
+      typographer: false
     renderer:
       unsafe: true
   highlight: 
