--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -25,4 +25,5 @@ jobs:
           cd public && git init && git add -A
           git config --global user.name github-actions[bot]
           git config --global user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git remote add origin https://github.com/LunarWatcher/lunarwatcher.github.io/
           git commit -m "Deploy changes for ${GITHUB_SHA}" && git push origin deployment --force
