--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -22,7 +22,7 @@ jobs:
         run: |
           mkdir public 
           hugo --minify
-          cd public && git config --global init.defaultBranch="deployment" && git init && git add -A
+          cd public && git config --global init.defaultBranch deployment && git init && git add -A
           git config --global user.name github-actions[bot]
           git config --global user.email 41898282+github-actions[bot]@users.noreply.github.com
           git remote add origin https://github.com/LunarWatcher/lunarwatcher.github.io/
