--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -26,4 +26,11 @@ jobs:
           git config --global user.name github-actions[bot]
           git config --global user.email 41898282+github-actions[bot]@users.noreply.github.com
           git remote add origin https://github.com/LunarWatcher/lunarwatcher.github.io/
-          git commit -m "Deploy changes for ${GITHUB_SHA}" && git push origin deployment --force
+          git commit -m "Deploy changes for ${GITHUB_SHA}"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: deployment
+          force: false
+          directory: public
