--- a/config.yaml
+++ b/config.yaml
@@ -16,9 +16,9 @@ markup:
       typographer: false
     renderer:
       unsafe: true
-  highlight: 
-    style: emacs 
-  tableOfContents: 
+  highlight:
+    style: emacs
+  tableOfContents:
     endLevel: 6
     startLevel: 2
 
@@ -39,8 +39,8 @@ taxonomies:
 
 menu:
   main:
-  - identifier: Home 
-    name: Home 
+  - identifier: Home
+    name: Home
     url: "/"
     weight: 1
   - identifier: Blog
@@ -51,18 +51,15 @@ menu:
     name: Tags
     url: "/tags.html"
     weight: 3
-  - identifier: Notes
-    name: Notes
-    url: "/notes/"
-    weight: 4
   - identifier: TIL
     name: TIL
     url: "/til/"
+    weight: 4
+  - identifier: Pages
+    name: Other pages
+    url: "/pages.html"
     weight: 5
-  - identifier: Emoji reference 
-    name: Emoji reference
-    url: "/emojis.html"
-    weight: 6
+
 
 params:
   discord: y3vd2vAYru
