--- a/config.yaml
+++ b/config.yaml
@@ -130,7 +130,7 @@ params:
       languages: [TBD]
       license: MIT
       description: |
-        vimsence, but concurrent, vim9-compatible, and running on jobs
+        vimsence, but concurrent, vim9-compatible, and running on jobs. The repo is private until the initial release.
     - name: Auto pairs
       languages: [Vimscript]
       state: ma
