--- a/config.yaml
+++ b/config.yaml
@@ -63,7 +63,7 @@ menu:
 
 params:
   discord: y3vd2vAYru
-  discord_user: Olivia#0740
+  discord_user: @oliviawolfie
   github: LunarWatcher
   deviantart: oliviazoe0
   tags:
