--- a/config.yaml
+++ b/config.yaml
@@ -64,6 +64,8 @@ menu:
     url: "/contact.html"
     weight: 5
     # In retrospect, this feels fucking moronic
+    # You know what the navbar needs? A dropdown.
+    # Have fun, future future me
   - identifier: Pages
     name: Other pages
     url: "/pages.html"
@@ -76,5 +78,3 @@ params:
   github: LunarWatcher
   gpg-signature: "2CE6 6B15 2ED5 6C24 C6A9 C71E 76C0 735B CD18 3F71"
   email_proxy: "https://en.wikipedia.org/wiki/Special:EmailUser/OliviaWolfie"
-  tags:
-    c++: Posts and notes about the C++ language. This description pretty much only exists so I can test whether or not my config.yaml-based system for descriptions work :)
