--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,19 +2,25 @@ baseURL: https://lunarwatcher.github.io
 languageCode: en-GB
 title: Olivia's blog
 publishDir: public
+timeZone: Europe/Oslo
 permalinks:
   posts: /posts/:year/:month/:day/:slug
 
 uglyurls: true
 pygmentsUseClasses: true
+enableEmoji: true
+
+author:
+  name: Olivia
+  email: zoe.i2k1@gmail.com
 
 markup:
-  enableEmoji: true
   goldmark:
     extensions:
       linkify: true
       typographer: false
       footnote: true
+      abbreviations: true
     renderer:
       unsafe: true
       footnoteAnchorPrefix: ""
@@ -33,44 +39,12 @@ outputs:
 
 outputFormats:
   RSS:
-    mediatype: application/rss
+    mediatype: application/rss+xml
     baseName: feed
 
 taxonomies:
   tag: tags
   series: series
-
-# There has to be a better way to do this
-menu:
-  main:
-  - identifier: Home
-    name: Home
-    url: "/"
-    weight: 1
-  - identifier: Blog
-    name: Blog
-    url: "/posts/"
-    weight: 2
-  - identifier: Tags
-    name: Tags
-    url: "/tags.html"
-    weight: 3
-  - identifier: TIL
-    name: TIL
-    url: "/til/"
-    weight: 4
-  - identifier: Contact me
-    name: Contact me
-    url: "/contact.html"
-    weight: 5
-    # In retrospect, this feels fucking moronic
-    # You know what the navbar needs? A dropdown.
-    # Have fun, future future me
-  - identifier: Pages
-    name: Other pages
-    url: "/pages.html"
-    weight: 6
-
 
 params:
   discord: y3vd2vAYru
