--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,6 +14,9 @@ author:
   name: Olivia
   email: zoe.i2k1@gmail.com
 
+#frontmatter:
+  #lastmod: ["lastmod"]
+
 markup:
   goldmark:
     extensions:
