Replace gmail with protonmail

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -52,7 +52,7 @@ taxonomies:
 params:
   author:
     name: Olivia
-    email: zoe.i2k1@gmail.com
+    email: oliviawolfie@pm.me
   discord: y3vd2vAYru
   discord_user: oliviawolfie
   github: LunarWatcher
